--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@tailwind base;
+@tailwind components;
 @tailwind utilities;
 
 @layer base {
@@ -76,6 +78,9 @@
 }
 
 * {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
   @apply border-border;
 }
 
